Update logout links to redirect to index.html and add index.html for login functionality

--- a/adminBookingManagement.html
+++ b/adminBookingManagement.html
@@ -44,7 +44,7 @@
       <a class="text-sm font-medium text-black/60 dark:text-white/60 hover:text-primary dark:hover:text-primary transition-colors" href="adminMonitoringDashboard.html">Dashboard</a>
       <a class="text-sm font-medium text-primary dark:text-primary transition-colors" href="adminBookingManagement.html">Booking Management</a>
       <a class="text-sm font-medium text-black/60 dark:text-white/60 hover:text-primary dark:hover:text-primary transition-colors" href="adminEmergencyManagement.html">Emergency Management</a>
-      <a class="text-sm font-medium text-black/60 dark:text-white/60 hover:text-primary dark:hover:text-primary transition-colors" href="adminLogin.html">Logout</a>
+      <a class="text-sm font-medium text-black/60 dark:text-white/60 hover:text-primary dark:hover:text-primary transition-colors" href="index.html">Logout</a>
     </nav>
   </div>
 </header>
