--- a/adminMonitoringDashboard.html
+++ b/adminMonitoringDashboard.html
@@ -43,7 +43,7 @@
       <a class="text-sm font-medium text-primary hover:text-white/90 transition-colors" href="adminMonitoringDashboard.html">Dashboard</a>
       <a class="text-sm font-medium text-white/60 hover:text-primary transition-colors" href="adminBookingManagement.html">Booking Management</a>
       <a class="text-sm font-medium text-white/60 hover:text-primary transition-colors" href="adminEmergencyManagement.html">Emergency Management</a>
-      <a class="text-sm font-medium text-white/60 hover:text-primary transition-colors" href="adminLogin.html">Logout</a>
+      <a class="text-sm font-medium text-white/60 hover:text-primary transition-colors" href="index.html">Logout</a>
     </nav>
   </div>
 </header>
