--- a/adminEmergencyManagement.html
+++ b/adminEmergencyManagement.html
@@ -34,22 +34,38 @@
 <body class="bg-background-light dark:bg-background-dark font-display text-gray-800 dark:text-gray-200">
 
 <!-- Top Navbar -->
-<header class="w-full bg-background-light dark:bg-background-dark border-b border-black/10 dark:border-white/10 sticky top-0 z-50">
+<header class="w-full bg-background-dark border-b border-white/10">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between py-4">
+    <!-- Logo -->
     <div class="flex items-center gap-3">
       <div class="w-8 h-8 text-primary">
         <svg fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
           <path clip-rule="evenodd" d="M12.0799 24L4 19.2479L9.95537 8.75216L18.04 13.4961L18.0446 4H29.9554L29.96 13.4961L38.0446 8.75216L44 19.2479L35.92 24L44 28.7521L38.0446 39.2479L29.96 34.5039L29.9554 44H18.0446L18.04 34.5039L9.95537 39.2479L4 28.7521L12.0799 24Z" fill="currentColor" fill-rule="evenodd"></path>
         </svg>
       </div>
-      <h1 class="text-lg md:text-xl font-bold text-black/90 dark:text-white/90">Smart Crowd Management</h1>
+      <h1 class="text-lg md:text-xl font-bold text-white/90">Smart Crowd Management</h1>
     </div>
-    <nav class="flex items-center gap-6">
-      <a class="text-sm font-medium text-black/60 dark:text-white/60 hover:text-primary dark:hover:text-primary transition-colors" href="adminMonitoringDashboard.html">Dashboard</a>
-      <a class="text-sm font-medium text-black/60 dark:text-white/60 hover:text-primary dark:hover:text-primary transition-colors" href="adminBookingManagement.html">Booking Management</a>
-      <a class="text-sm font-medium text-primary dark:text-primary transition-colors" href="adminEmergencyManagement.html">Emergency Management</a>
-      <a class="text-sm font-medium text-black/60 dark:text-white/60 hover:text-primary dark:hover:text-primary transition-colors" href="index.html">Logout</a>
+
+    <!-- Desktop Nav -->
+    <nav class="hidden lg:flex items-center gap-6">
+      <a class="text-sm font-medium text-primary hover:text-white/90 transition-colors" href="adminMonitoringDashboard.html">Dashboard</a>
+      <a class="text-sm font-medium text-white/60 hover:text-primary transition-colors" href="adminBookingManagement.html">Booking Management</a>
+      <a class="text-sm font-medium text-white/60 hover:text-primary transition-colors" href="adminEmergencyManagement.html">Emergency Management</a>
+      <a class="text-sm font-medium text-white/60 hover:text-primary transition-colors" href="index.html">Logout</a>
     </nav>
+
+    <!-- Mobile Hamburger -->
+    <button id="menu-btn" class="lg:hidden p-2 rounded-md text-white hover:bg-gray-700">
+      <span class="material-symbols-outlined">menu</span>
+    </button>
+  </div>
+
+  <!-- Mobile Menu (hidden by default) -->
+  <div id="mobile-menu" class="hidden lg:hidden px-4 pb-4 space-y-3 bg-background-dark">
+    <a class="block text-sm font-medium text-primary hover:text-white/90 transition-colors" href="adminMonitoringDashboard.html">Dashboard</a>
+    <a class="block text-sm font-medium text-white/60 hover:text-primary transition-colors" href="adminBookingManagement.html">Booking Management</a>
+    <a class="block text-sm font-medium text-white/60 hover:text-primary transition-colors" href="adminEmergencyManagement.html">Emergency Management</a>
+    <a class="block text-sm font-medium text-white/60 hover:text-primary transition-colors" href="index.html">Logout</a>
   </div>
 </header>
 
