--- a/adminMonitoringDashboard.html
+++ b/adminMonitoringDashboard.html
@@ -31,6 +31,7 @@
 <!-- Top Navbar -->
 <header class="w-full bg-background-dark border-b border-white/10">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between py-4">
+    <!-- Logo -->
     <div class="flex items-center gap-3">
       <div class="w-8 h-8 text-primary">
         <svg fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
@@ -39,12 +40,27 @@
       </div>
       <h1 class="text-lg md:text-xl font-bold text-white/90">Smart Crowd Management</h1>
     </div>
-    <nav class="flex items-center gap-6">
+
+    <!-- Desktop Nav -->
+    <nav class="hidden lg:flex items-center gap-6">
       <a class="text-sm font-medium text-primary hover:text-white/90 transition-colors" href="adminMonitoringDashboard.html">Dashboard</a>
       <a class="text-sm font-medium text-white/60 hover:text-primary transition-colors" href="adminBookingManagement.html">Booking Management</a>
       <a class="text-sm font-medium text-white/60 hover:text-primary transition-colors" href="adminEmergencyManagement.html">Emergency Management</a>
       <a class="text-sm font-medium text-white/60 hover:text-primary transition-colors" href="index.html">Logout</a>
     </nav>
+
+    <!-- Mobile Hamburger -->
+    <button id="menu-btn" class="lg:hidden p-2 rounded-md text-white hover:bg-gray-700">
+      <span class="material-symbols-outlined">menu</span>
+    </button>
+  </div>
+
+  <!-- Mobile Menu (hidden by default) -->
+  <div id="mobile-menu" class="hidden lg:hidden px-4 pb-4 space-y-3 bg-background-dark">
+    <a class="block text-sm font-medium text-primary hover:text-white/90 transition-colors" href="adminMonitoringDashboard.html">Dashboard</a>
+    <a class="block text-sm font-medium text-white/60 hover:text-primary transition-colors" href="adminBookingManagement.html">Booking Management</a>
+    <a class="block text-sm font-medium text-white/60 hover:text-primary transition-colors" href="adminEmergencyManagement.html">Emergency Management</a>
+    <a class="block text-sm font-medium text-white/60 hover:text-primary transition-colors" href="index.html">Logout</a>
   </div>
 </header>
 
