--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html class="dark" lang="en">
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Smart Crowd Management Login</title>
+
+  <!-- Google Fonts -->
   <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
   <link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Public+Sans:wght@400;500;700;900" onload="this.rel='stylesheet'" rel="stylesheet"/>
+
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   <script>
     tailwind.config = {
@@ -29,52 +34,82 @@
       },
     }
   </script>
+
+  <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 </head>
-<body class="bg-background-light dark:bg-background-dark font-display">
-<div class="flex flex-col min-h-screen">
+<body class="bg-background-light dark:bg-background-dark font-display min-h-screen flex items-center justify-center p-4">
 
-  <!-- ✅ Removed navbar / sidebar -->
+  <main class="w-full max-w-md">
+    <div class="bg-background-light dark:bg-background-dark/60 border border-black/10 dark:border-white/10 rounded-2xl shadow-2xl shadow-black/10 dark:shadow-black/50">
+      <div class="p-6 sm:p-8 space-y-6">
 
-  <main class="flex-grow flex items-center justify-center p-4 sm:p-6 lg:p-8">
-    <div class="w-full max-w-md mx-auto">
-      <div class="bg-background-light dark:bg-background-dark/50 border border-black/10 dark:border-white/10 rounded-xl shadow-2xl shadow-black/10 dark:shadow-black/50">
-        <div class="p-6 sm:p-8 space-y-6">
-          <div class="text-center">
-            <h2 class="text-2xl sm:text-3xl font-bold text-black/90 dark:text-white/90">Authority Login</h2>
-            <p class="mt-2 text-sm text-black/60 dark:text-white/60">
-              Secure access for authorized personnel.
-            </p>
-          </div>
-          <form class="space-y-4" onsubmit="event.preventDefault(); window.location.href='adminEmergencyManagement.html';">
-            <div>
-              <label class="sr-only" for="email">Username or Email</label>
-              <div class="relative">
-                <span class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-black/40 dark:text-white/40">person</span>
-                <input autocomplete="email" class="form-input w-full pl-10 pr-4 py-3 rounded-lg border-black/20 dark:border-white/20 bg-background-light dark:bg-background-dark/50 focus:ring-primary focus:border-primary text-black/90 dark:text-white/90 placeholder-black/50 dark:placeholder-white/50" id="email" name="email" placeholder="Username or Email" required type="email"/>
-              </div>
-            </div>
-            <div>
-              <label class="sr-only" for="password">Password</label>
-              <div class="relative">
-                <span class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-black/40 dark:text-white/40">lock</span>
-                <input autocomplete="current-password" class="form-input w-full pl-10 pr-4 py-3 rounded-lg border-black/20 dark:border-white/20 bg-background-light dark:bg-background-dark/50 focus:ring-primary focus:border-primary text-black/90 dark:text-white/90 placeholder-black/50 dark:placeholder-white/50" id="password" name="password" placeholder="Password" required type="password"/>
-              </div>
-            </div>
-            <div class="flex items-center">
-              <input class="h-4 w-4 rounded border-black/30 dark:border-white/30 text-primary focus:ring-primary bg-background-light dark:bg-background-dark/50" id="remember-me" name="remember-me" type="checkbox"/>
-              <label class="ml-2 block text-sm text-black/80 dark:text-white/80" for="remember-me">Remember me</label>
-            </div>
-            <div>
-              <button class="w-full flex justify-center py-3 px-4 border border-transparent rounded-lg shadow-sm text-sm font-medium text-white bg-primary hover:bg-primary/90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-all duration-300 ease-in-out" type="submit">
-                Login
-              </button>
-            </div>
-          </form>
+        <!-- Header -->
+        <div class="text-center space-y-2">
+          <h2 class="text-2xl sm:text-3xl lg:text-4xl font-extrabold text-black/90 dark:text-white/90">
+            Authority Login
+          </h2>
+          <p class="text-sm sm:text-base text-black/60 dark:text-white/60">
+            Secure access for authorized personnel.
+          </p>
         </div>
+
+        <!-- Login Form -->
+        <form class="space-y-5" onsubmit="event.preventDefault(); window.location.href='adminEmergencyManagement.html';">
+
+          <!-- Username / Email -->
+          <div>
+            <label class="sr-only" for="email">Username or Email</label>
+            <div class="relative">
+              <span class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-black/40 dark:text-white/40">person</span>
+              <input id="email" name="email" type="email" required
+                autocomplete="email"
+                placeholder="Username or Email"
+                class="form-input w-full pl-10 pr-4 py-3 rounded-lg border-black/20 dark:border-white/20 
+                       bg-background-light dark:bg-background-dark/50 
+                       focus:ring-2 focus:ring-primary focus:border-primary 
+                       text-black/90 dark:text-white/90 placeholder-black/50 dark:placeholder-white/50"/>
+            </div>
+          </div>
+
+          <!-- Password -->
+          <div>
+            <label class="sr-only" for="password">Password</label>
+            <div class="relative">
+              <span class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-black/40 dark:text-white/40">lock</span>
+              <input id="password" name="password" type="password" required
+                autocomplete="current-password"
+                placeholder="Password"
+                class="form-input w-full pl-10 pr-4 py-3 rounded-lg border-black/20 dark:border-white/20 
+                       bg-background-light dark:bg-background-dark/50 
+                       focus:ring-2 focus:ring-primary focus:border-primary 
+                       text-black/90 dark:text-white/90 placeholder-black/50 dark:placeholder-white/50"/>
+            </div>
+          </div>
+
+          <!-- Remember me -->
+          <div class="flex items-center">
+            <input id="remember-me" name="remember-me" type="checkbox"
+              class="h-4 w-4 rounded border-black/30 dark:border-white/30 text-primary focus:ring-primary 
+                     bg-background-light dark:bg-background-dark/50"/>
+            <label for="remember-me" class="ml-2 text-sm sm:text-base text-black/80 dark:text-white/80">
+              Remember me
+            </label>
+          </div>
+
+          <!-- Submit -->
+          <div>
+            <button type="submit"
+              class="w-full py-3 px-4 rounded-lg text-sm sm:text-base font-medium 
+                     text-white bg-primary hover:bg-primary/90 
+                     shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary 
+                     transition-all duration-300 ease-in-out">
+              Login
+            </button>
+          </div>
+        </form>
       </div>
     </div>
   </main>
-</div>
 </body>
 </html>
