added missing js logic in it

--- a/adminEmergencyManagement.html
+++ b/adminEmergencyManagement.html
@@ -172,5 +172,12 @@
   </section>
 
 </main>
+
+<script>
+  // ✅ Mobile menu toggle
+  document.getElementById("menu-btn").addEventListener("click", () => {
+    document.getElementById("mobile-menu").classList.toggle("hidden");
+  });
+</script>
 </body>
 </html>
