--- a/adminBookingManagement.html
+++ b/adminBookingManagement.html
@@ -151,6 +151,11 @@
     </div>
   </div>
 </main>
-
+<script>
+  // ✅ Mobile menu toggle
+  document.getElementById("menu-btn").addEventListener("click", () => {
+    document.getElementById("mobile-menu").classList.toggle("hidden");
+  });
+</script>
 </body>
 </html>
