--- a/adminMonitoringDashboard.html
+++ b/adminMonitoringDashboard.html
@@ -104,5 +104,12 @@
     </div>
   </section>
 </main>
+
+<script>
+  // ✅ Mobile menu toggle
+  document.getElementById("menu-btn").addEventListener("click", () => {
+    document.getElementById("mobile-menu").classList.toggle("hidden");
+  });
+</script>
 </body>
 </html>
